# cs-240-graph-demo

./: Cargo.toml  README.md  example.yaml
src/: app.rs  cli.rs  interactive.rs  main.rs
src/gui/: mod.rs  pages.rs
src/gui/modals/: mod.rs
src/gui/widgets/: mod.rs  modal_view.rs  page_view.rs  top_bar.rs
